--- a/app/pages/index.pug
+++ b/app/pages/index.pug
@@ -258,6 +258,24 @@ block content
         .arrow.arrow_bottom
     .content
         .container
+            +b.stages
+                +e.header Как мы работаем
+                +e.items
+                    +e.item
+                        +e.image
+                        +e.title Заявка
+                        +e.text С другой стороны постоянное  нформационно-пропагандистское обеспечение нашей деятельности представляет собой интересный ксперимент проверки систем массового участия. Товарищи! сложившаяся
+                        +e.line
+                    +e.item
+                        +e.image
+                        +e.title Бесплатная консультация
+                        +e.text Таким образом сложившаяся структура организации требуют от нас анализа модели развития. Не следует, однако забывать, что укрепление и развитие структуры влечет за собой процесс внедрения и модернизации соответствующий условий активизации
+                        +e.line
+                    +e.item
+                        +e.image
+                        +e.title Заключение договор
+                        +e.text С другой стороны постоянное  нформационно-пропагандистское обеспечение нашей деятельности представляет собой интересный ксперимент проверки систем массового участия. Товарищи! сложившаяся
+                        +e.line
 
             +b.reviews
                 +e.title Что говорят о нас наши клиенты?
@@ -317,6 +335,8 @@ block content
                     .input__message
                 button(type="submit").btn.btn_view_pseudo
                     .btn__text Записаться на консультацию
+
+    
     .footer
         .container 123
     .copyright
