--- a/app/pages/index.pug
+++ b/app/pages/index.pug
@@ -258,6 +258,17 @@ block content
         .arrow.arrow_bottom
     .content
         .container
+            +b.deadlines
+                +e.stage
+                    +e.number 
+                        span 1
+                        //br
+                        |этап
+                +e.body
+                    +e.title Ваш шедевр готов!
+                    +e.text Не следует, однако забывать, что консультация с широким активом требуют определения и уточнения направлений прогрессивного р азвития. Таким образом сложившаяся структура организации требуют от нас анализа форм развития. Повседневная практика показывает, что новая модель организационной деятельности обеспечивает широкому кругу (специалистов) участие в формировании направлений прогрессивного развития. 
+                +e.time Сроки выполнения: 1 месяц
+
             +b.stages
                 +e.header Как мы работаем
                 +e.items
