--- a/app/pages/index.pug
+++ b/app/pages/index.pug
@@ -258,16 +258,89 @@ block content
         .arrow.arrow_bottom
     .content
         .container
+
+            +b.articles
+                +e.item
+                    +e.box
+                        img(src="http://farm8.static.flickr.com/7907/33535681578_4091be1523_b.jpg").articles__img
+                        +e.content
+                            +e.date 10 января 2019 г.
+                            +e.title По своей сути рыбатекст является альтернативой традиционному
+                            +e.description С другой стороны консультация с широким активом обеспечивает широкому кругу (специалистов) участие в формировании соответствующий условий активизации
+                            +e.more
+                                +b.more 
+                                    |Подробне
+                                    +e.arrow
+                +e.item
+                    +e.box
+                        img(src="http://farm8.static.flickr.com/7907/33535681578_4091be1523_b.jpg").articles__img
+                        +e.content
+                            +e.date 10 января 2019 г.
+                            +e.title По своей сути рыбатекст является альтернативой традиционному
+                            +e.description С другой стороны консультация с широким активом обеспечивает широкому кругу (специалистов) участие в формировании соответствующий условий активизации
+                            +e.more
+                                +b.more 
+                                    |Подробне
+                                    +e.arrow
+                +e.item
+                    +e.box
+                        img(src="http://farm8.static.flickr.com/7907/33535681578_4091be1523_b.jpg").articles__img
+                        +e.content
+                            +e.date 10 января 2019 г.
+                            +e.title По своей сути рыбатекст является альтернативой традиционному
+                            +e.description С другой стороны консультация с широким активом обеспечивает широкому кругу (специалистов) участие в формировании соответствующий условий активизации
+                            +e.more
+                                +b.more 
+                                    |Подробне
+                                    +e.arrow
+                +e.item
+                    +e.box
+                        img(src="http://farm8.static.flickr.com/7907/33535681578_4091be1523_b.jpg").articles__img
+                        +e.content
+                            +e.date 10 января 2019 г.
+                            +e.title По своей сути рыбатекст является альтернативой традиционному
+                            +e.description С другой стороны консультация с широким активом обеспечивает широкому кругу (специалистов) участие в формировании соответствующий условий активизации
+                            +e.more
+                                +b.more 
+                                    |Подробне
+                                    +e.arrow
+                +e.item
+                    +e.box
+                        img(src="http://farm8.static.flickr.com/7907/33535681578_4091be1523_b.jpg").articles__img
+                        +e.content
+                            +e.date 10 января 2019 г.
+                            +e.title По своей сути рыбатекст является альтернативой традиционному
+                            +e.description С другой стороны консультация с широким активом обеспечивает широкому кругу (специалистов) участие в формировании соответствующий условий активизации
+                            +e.more
+                                +b.more 
+                                    |Подробне
+                                    +e.arrow
+                
             +b.deadlines
-                +e.stage
-                    +e.number 
-                        span 1
-                        //br
-                        |этап
-                +e.body
-                    +e.title Ваш шедевр готов!
-                    +e.text Не следует, однако забывать, что консультация с широким активом требуют определения и уточнения направлений прогрессивного р азвития. Таким образом сложившаяся структура организации требуют от нас анализа форм развития. Повседневная практика показывает, что новая модель организационной деятельности обеспечивает широкому кругу (специалистов) участие в формировании направлений прогрессивного развития. 
-                +e.time Сроки выполнения: 1 месяц
+                +e.header Как мы работаем
+                +e.wrapper
+                    +e.item
+                        +e.stage
+                            +e.number 
+                                span 1
+                                //br
+                                |этап
+                        +e.body
+                            +e.title Ваш шедевр готов!
+                            +e.text Не следует, однако забывать, что консультация с широким активом требуют определения и уточнения направлений прогрессивного р азвития. Таким образом сложившаяся структура организации требуют от нас анализа форм развития. Повседневная практика показывает, что новая модель организационной деятельности обеспечивает широкому кругу (специалистов) участие в формировании направлений прогрессивного развития. 
+                        +e.time-wrapper
+                            +e.time Сроки выполнения: 1 месяц
+                    +e.item
+                        +e.stage
+                            +e.number 
+                                span 1
+                                //br
+                                |этап
+                        +e.body
+                            +e.title Ваш шедевр готов!
+                            +e.text Не следует, однако забывать, что консультация с широким активом требуют определения и уточнения направлений прогрессивного р азвития. Таким образом сложившаяся структура организации требуют от нас анализа форм развития. Повседневная практика показывает, что новая модель организационной деятельности обеспечивает широкому кругу (специалистов) участие в формировании направлений прогрессивного развития. 
+                        +e.time-wrapper
+                            +e.time Сроки выполнения: 1 месяц
 
             +b.stages
                 +e.header Как мы работаем
@@ -322,30 +395,33 @@ block content
                 li Повседневная практика показывает, что сложившаяся структура организации требуют от нас анализа модели развития. Разнообразный и богатый опыт укрепление и развитие структуры способствует подготовки и реализации систем массового участия.
             img(src="http://farm8.static.flickr.com/7907/33535681578_4091be1523_b.jpg")
             blockquote По своей сути рыбатекст является альтернативой традиционному lorem ipsum, который вызывает у некторых людей недоумение при попытках прочитать рыбу текст. В отличии от lorem ipsum, текст рыба на русском языке наполнит любой макет непонятным смыслом и придаст неповт оримый колорит советских времен.
-            form.form.ajax
-                .input
-                    .input__box
-                        .input__top-border
-                        .input__title Имя
-                        .input__icon
-                        input(name='name').input__control
-                    .input__message(data-default="Укажите точно как в паспорте")
-                .input
-                    .input__box
-                        .input__top-border
-                        .input__title Имя
-                        .input__icon
-                        input(name='phone' value="123").input__control
-                        //- label(for="name") 123
-                .input
-                    .input__box
-                        .input__top-border
-                        .input__title Email
-                        .input__icon
-                        input(name='email').input__control
-                    .input__message
-                button(type="submit").btn.btn_view_pseudo
-                    .btn__text Записаться на консультацию
+            
+            .form-box
+                .form-box__wrapper
+                    form.form.ajax
+                        .input
+                            .input__box
+                                .input__top-border
+                                .input__title Имя
+                                .input__icon
+                                input(name='name').input__control
+                            .input__message(data-default="Укажите точно как в паспорте")
+                        .input
+                            .input__box
+                                .input__top-border
+                                .input__title Имя
+                                .input__icon
+                                input(name='phone' value="123").input__control
+                                //- label(for="name") 123
+                        .input
+                            .input__box
+                                .input__top-border
+                                .input__title Email
+                                .input__icon
+                                input(name='email').input__control
+                            .input__message
+                        button(type="submit").btn.btn_view_action
+                            .btn__text Записаться на консультацию
 
     
     .footer
