--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -773,12 +773,12 @@ ul.list
         right 10px
         top -1px
         border-top 1px solid
-        border-top-color #dce2fa
+        border-top-color #959595
         transition all .2s ease 0s //transition border-color .13s ease-in,width 0s .1s;
         width calc(100% - 20px)
     &__box
         padding 0.556em 0.833em
-        border 1px solid #dce2fa
+        border 1px solid #959595
         border-top 0
         border-radius 4px
         width 100%
@@ -795,7 +795,7 @@ ul.list
             width 11px
             height 8px
             border-top 1px solid
-            border-top-color #dce2fa
+            border-top-color #959595
         &:before
             left -1px
             border-top-left-radius 4px
@@ -1313,12 +1313,17 @@ ul.list
 .form-box
     // padding 20px
     //background #ddd
+    margin 50px 0 
     &__wrapper
         //display table
         margin auto
-        border 1px solid #ddd
+        box-shadow 0px 4px 20px 0px rgba(0, 0, 0, 0.14), 0px 0px 0px 2px rgba(195, 195, 195, 0.09)
+        background #fdfdfd
         padding 40px
-        max-width 400px 
+        max-width 400px
+        border-radius 4px
+        .btn
+            width 100% 
 
 .modal
     position fixed
